--- a/proyecto.html
+++ b/proyecto.html
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <nav class="nav">
         <div class="logo"><a href="#">
-            <img src="/assets/img/Logo 1.png" alt="logo" />
+            <img src="assets/img/Logo 1.png" alt="logo" />
         </a>
     </div>
         <div class="menu d-none d-md-block">
@@ -50,7 +50,7 @@
        </div>
     </div></div>
         <div class="home-img">
-            <img src="/assets/img/Wallet 1 1.png" alt="wallet">
+            <img src="assets/img/Wallet 1 1.png" alt="wallet">
         </div>
     </section>
     <section class="sec-features">
@@ -89,7 +89,7 @@
                     </div>
         </div>
             <div class="image">
-                <img src="/assets/img/chart 1.png" alt="chart"/>
+                <img src="assets/img/chart 1.png" alt="chart"/>
             </div>
             
         </div>
